Address comments and add more unit test cases
Signed-off-by: Songkan Tang <songkant@amazon.com>